<?xml version="1.0" encoding="UTF-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:columnCount="1"
    android:orientation="vertical" >

    <GridLayout
        android:layout_width="550dp"
        android:layout_height="300dp"
        android:layout_column="0"
        android:layout_gravity="top|center"
        android:layout_marginTop="40dp"
        android:layout_row="0"
        android:background="@drawable/shape"
        android:columnCount="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvQuestionNumber"
            android:layout_column="0"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_row="0"
            android:text="@string/tv_question_number"
            android:textColor="#000"
            android:textSize="25sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_column="0"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:layout_row="1"
            android:background="#000" />

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_row="1"
            android:text="@string/tv_question"
            android:textColor="#000"
            android:textSize="30sp" />
    </GridLayout>

    <RadioGroup
        android:id="@+id/rgQuestion"
        android:layout_width="550dp"
        android:layout_height="400dp"
        android:layout_column="0"
        android:layout_gravity="top|center"
        android:layout_marginTop="40dp"
        android:layout_row="1"
        android:background="@drawable/shape"
        android:gravity="center" >

        <RadioButton
            android:id="@+id/rbAnswerA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:checked="true"
            android:text="@string/rb_answer_a"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/rbAnswerB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/rb_answer_b"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/rbAnswerC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/rb_answer_c"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/rbAnswerD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/rb_answer_d"
            android:textSize="25sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnNextQuestion"
        android:layout_column="0"
        android:layout_gravity="bottom|fill_horizontal"
        android:layout_row="2"
        android:background="@android:drawable/btn_default"
        android:padding="10dp"
        android:text="@string/btn_next_question"
        android:textColor="#FFF"
        android:textSize="50sp"
        android:textStyle="bold" />

</GridLayout>