<?xml version="1.0" encoding="UTF-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:columnCount="1"
    android:orientation="vertical" >

    <android.support.v4.view.ViewPager
        android:id="@+id/customViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/btnUserPanel"
        android:layout_column="0"
        android:layout_gravity="top|left"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_row="0"
        android:background="@null"
        android:contentDescription="@string/ib_user_descript"
        android:src="@drawable/user_login" />

    <ImageButton
        android:id="@+id/btnCloseApp"
        android:layout_column="0"
        android:layout_gravity="top|right"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_row="0"
        android:background="@null"
        android:contentDescription="@string/ib_close_descript"
        android:src="@drawable/exit" />

    <ImageButton
        android:id="@+id/btnPreviousView"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_marginLeft="30dp"
        android:layout_row="0"
        android:background="@null"
        android:contentDescription="@string/ib_previous_descript"
        android:src="@drawable/previous" />

    <ImageButton
        android:id="@+id/btnNextView"
        android:layout_column="0"
        android:layout_gravity="center|right"
        android:layout_marginRight="30dp"
        android:layout_row="0"
        android:background="@null"
        android:contentDescription="@string/ib_next_descript"
        android:src="@drawable/next" />

</GridLayout>