<?xml version="1.0" encoding="UTF-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:columnCount="1"
    android:orientation="vertical" >

    <TextView
        android:layout_column="0"
        android:layout_gravity="center|top"
        android:layout_marginTop="40dp"
        android:layout_row="0"
        android:text="@string/tv_login"
        android:textColor="#000"
        android:textSize="80sp" />

    <GridLayout
        android:layout_width="450dp"
        android:layout_height="500dp"
        android:layout_column="0"
        android:layout_gravity="center|top"
        android:layout_marginTop="40dp"
        android:layout_row="1"
        android:background="@drawable/shape"
        android:columnCount="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnLinkCreateAccount"
            android:layout_column="0"
            android:layout_gravity="top|fill_horizontal"
            android:layout_marginTop="100dp"
            android:layout_row="0"
            android:background="@android:drawable/btn_default"
            android:padding="20dp"
            android:text="@string/btn_create_acc_link"
            android:textColor="#1A1A1A"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btnLinkSignIn"
            android:layout_column="0"
            android:layout_gravity="center|fill_horizontal"
            android:layout_row="1"
            android:background="@android:drawable/btn_default"
            android:padding="20dp"
            android:text="@string/btn_sign_in_link"
            android:textColor="#1A1A1A"
            android:textSize="50sp" />
    </GridLayout>

    <ImageView
        android:layout_column="0"
        android:layout_gravity="bottom|center"
        android:layout_row="2"
        android:contentDescription="@string/iv_book_descript"
        android:src="@drawable/books" />

</GridLayout>