<?xml version="1.0" encoding="UTF-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:columnCount="1"
    android:orientation="vertical" >

    <TextView
        android:layout_column="0"
        android:layout_gravity="center|top"
        android:layout_marginTop="40dp"
        android:layout_row="0"
        android:text="@string/tv_sign_in"
        android:textColor="#000"
        android:textSize="80sp" />

    <GridLayout
        android:layout_width="450dp"
        android:layout_height="500dp"
        android:layout_column="0"
        android:layout_gravity="center|top"
        android:layout_marginTop="40dp"
        android:layout_row="1"
        android:background="@drawable/shape"
        android:columnCount="1"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/etSignInEmail"
            android:layout_column="0"
            android:layout_gravity="top|fill_horizontal"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="50dp"
            android:layout_row="0"
            android:background="#EEE"
            android:hint="@string/et_sign_in_email"
            android:inputType="textEmailAddress"
            android:padding="30dp"
            android:textColor="#000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/etSignInPassword"
            android:layout_column="0"
            android:layout_gravity="top|fill_horizontal"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="10dp"
            android:layout_row="1"
            android:background="#EEE"
            android:hint="@string/et_sign_in_pass"
            android:inputType="textPassword"
            android:padding="30dp"
            android:textColor="#000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnForgotPass"
            android:layout_column="0"
            android:layout_gravity="top|center"
            android:layout_marginTop="30dp"
            android:layout_row="2"
            android:background="@android:drawable/btn_default_small"
            android:padding="20dp"
            android:text="@string/btn_forgot_pass"
            android:textColor="#000"
            android:textSize="30sp" />

        <View
            android:layout_height="1dp"
            android:layout_column="0"
            android:layout_gravity="top|fill_horizontal"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="30dp"
            android:layout_row="3"
            android:background="@android:color/darker_gray"
            android:visibility="visible" />

        <TextView
            android:id="@+id/statusSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_row="4"
            android:text="@string/tv_status"
            android:gravity="center"
            android:textColor="#B20000"
            android:textSize="20sp" />
    </GridLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="2"
        android:background="@android:drawable/btn_default"
        android:padding="20dp"
        android:text="@string/btn_sign_in"
        android:textColor="#FFF"
        android:textSize="60sp"
        android:textStyle="bold" />

</GridLayout>