<?xml version="1.0" encoding="UTF-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutViewMedium"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:columnCount="1"
    android:orientation="vertical" >

    <TextView
        android:layout_column="0"
        android:layout_gravity="center|top"
        android:layout_marginTop="40dp"
        android:layout_row="0"
        android:text="@string/tv_view_medium"
        android:textColor="#000"
        android:textSize="80sp" />

    <GridLayout
        android:layout_width="450dp"
        android:layout_height="500dp"
        android:layout_column="0"
        android:layout_gravity="center|top"
        android:layout_marginTop="40dp"
        android:layout_row="1"
        android:columnCount="1"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/btnViewMedium"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="0"
            android:background="@null"
            android:contentDescription="@string/ib_view_descript"
            android:src="@drawable/lesson2" />
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_row="2"
        android:gravity="center"
        android:text="@string/tv_view_info_medium"
        android:textColor="#000"
        android:textSize="25sp" />

</GridLayout>